@@ -2328,6 +2328,8 @@ class LazyRegistry:
 class ApplicationRegistry:
     """A wrapper class used to distribute changes to the application registry."""
 
+    __slots__ = ["_registry"]
+
     def __init__(self, registry):
         self._registry = registry
 
@@ -2359,6 +2361,12 @@ class ApplicationRegistry:
 
     def __getattr__(self, name):
         return getattr(self._registry, name)
+
+    def __setattr__(self, name, value):
+        if name in self.__slots__:
+            super().__setattr__(name, value)
+        else:
+            setattr(self._registry, name, value)
 
     def __dir__(self):
         return dir(self._registry)
