@@ -5,6 +5,7 @@ Pint Changelog
 -----------------
 
 - Upgrade min version of uncertainties to 3.1.4
+- Fix setting options of the application registry (Issue #1403).
 
 
 0.18 (2021-10-26)
